@@ -655,6 +655,7 @@
 
 <UL>
 <LI>Access-List-Controlled Protection </LI>
+<LI>Binary Floating-Point instructions </LI>
 <LI>Branch and Set Authority </LI>
 <LI>Broadcasted Purging </LI>
 <LI>Checksum instruction </LI>
@@ -703,9 +704,6 @@
 <P>The following standard feature has not yet been implemented: </P>
 <UL>
 <LI>Clear I/O (full functionality for S/370) </LI></ul>
-<p>The following standard feature has been partially implemented: </p>
-<ul>
-<LI>Binary Floating-Point instructions </LI></UL>
 <P>The following optional features have been partially implemented: </P>
 <UL>
 <LI>Channel-Subsystem Call </LI>
@@ -873,7 +871,7 @@ lists, please let me (Jay Maynard) know.</P>
 </P>
 <P>
 <small>
-Last updated 16 Aug 2004
+Last updated 28 Nov 2004
 </small>
 </P>
 </BODY>
